@@ -173,7 +173,7 @@ public class SwtTrendMomentumStudy extends Study {
             for (MomentumType type : values()) {
                 map.put(type.name(), type);
             }
-            STRING_TO_ENUM_MAP = Map.copyOf(map);
+            STRING_TO_ENUM_MAP = Collections.unmodifiableMap(map);
         }
         
         /**
@@ -682,6 +682,7 @@ public class SwtTrendMomentumStudy extends Study {
             if (settings == null) {
                 // Double-check in case of race condition
                 throw new IllegalStateException("CachedSettings became null after validation");
+            }
             this.waveletAtr = new WaveletAtr(14, settings.levelWeightDecay); // 14-period smoothing with configurable decay
             logger.debug("Initialized WATR component with level decay: {}", settings.levelWeightDecay);
         } else if (waveletChanged || levelsChanged || windowChanged) {
@@ -961,6 +962,7 @@ public class SwtTrendMomentumStudy extends Study {
         if (settings == null) {
             // Double-check in case of race condition
             throw new IllegalStateException("CachedSettings became null after validation");
+        }
         MomentumType momentumType = settings.momentumType;
         int momentumWindow = settings.momentumWindow;
         double levelWeightDecay = settings.levelWeightDecay;
